style.sass
[data-plasmo-styles-target]
  font-size: 16px
  --bezier: cubic-bezier(0, 1, 0, 1)
  --bezier-chill: cubic-bezier(0, 1, .5, 1)
  --bezier-chill-inverted: cubic-bezier(1, 0, 1, .5)
  --bezier-out: cubic-bezier(1, 0.24, 1, 0.66)
  --bezier-relaxed: cubic-bezier(0.35, 0.7, 0.25, 1)
  --bezier-round: cubic-bezier(0, 0.5, 0.5, 1)
  --bezier-round-inverted: cubic-bezier(.5, 0, 1, .5)
  --bezier-symmetric: cubic-bezier(0.7, 0, 0.25, 1)
  --bezier-symmetric-inverted: cubic-bezier(0, .7, 1, 0.25)
  --bezier-symmetric-hard: cubic-bezier(.5, .1, .5, .9)
  --bezier-symmetric-hard-inverted: cubic-bezier(.1, .5, .9, .5)

@tailwind base
@tailwind components
@tailwind utilities

@import 'components/popup.sass'
@import 'components/button.sass'
@import 'components/binding-button.sass'

.made-tommy
  font-family: 'made_tommy', sans-serif

@mixin boolean-behavior($hidden-opacity: 0, $hidden-scale-factor: .85, $out-duration: .15s, $in-duration: .3s, $out-timing: var(--bezier-round-inverted), $in-timing: var(--bezier-chill))
  &:not(.enabled)
      pointer-events: none
      opacity: var(--_hidden-opacity, $hidden-opacity)
      transform: scale(var(--_hidden-scale-factor, $hidden-scale-factor))
      transition-timing-function: var(--_out-timing, $out-timing)
      transition-duration: var(--_out-duration, $out-duration)
  &.enabled
      opacity: 1
      transform: scale(1)

  transition-property: transform, opacity
  will-change: transform, opacity
  transition-duration: var(--_in-duration, $in-duration)
  transition-timing-function:  var(--_in-timing, $in-timing)

.v_toggle-visibility
  @include boolean-behavior

.v_toggle-availability
  @include boolean-behavior($hidden-opacity: .4, $hidden-scale-factor: .98, $out-duration: .3s, $out-timing: var(--bezier-chill))
  transition-property: transform, opacity, filter
  &:not(.enabled)
    filter: blur(3px) saturate(0)

.btn 
  @apply rounded-full

.bg-blur
  backdrop-filter: blur(15px) url(#aberration) hue-rotate(15deg) !important
  // background-color: rgba(20, 20, 20, 0.5)
  background-color: var(--_blur-bg) !important
  border: 2px solid #ccc5 !important
  border-radius: 16px !important
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) !important
  color: var(--_blur-text-color) !important

.debug *
  outline: 1px solid red
  outline-offset: -1px

.ghost
  // transition: opacity 0.3s var(--bezier-chill) !important
  *
    pointer-events: none !important
  &:hover
    opacity: 0.1 !important

